--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                             <div class="inputBox">
                                 <input type="submit" value="Login">
                             </div>
-                        </form> <!-- Fin del formulario -->
+                        </form> 
                     </div>
                 </div>
             </div>
