--- a/static/style2.css
+++ b/static/style2.css
@@ -2,14 +2,40 @@
 *
 body 
 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-family: 'Quicksand', sans-serif; 
   min-height: 100vh;
   color: white;
-  background: #333;
+  background: #181818;
 }
-.severity-3 {
-  background-color: red !important;
-  color: white !important;
+
+h1 {
+  text-align: center;
+  color: #0f0;
+}
+
+th {
+  color: #0f0;
+}
+
+.severity {
+  text-align: center;
+}
+
+
+table {
+  background-color: #333;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 15px 35px rgba(0,0,0,9);
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.severity-7 {
+  background-color: red;
+  color: white;
 }
