--- a/templates/logs.html
+++ b/templates/logs.html
@@ -8,28 +8,38 @@
 </head>
 <body>
     <h1>Router Logs</h1>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Timestamp</th>
-                <th>IP Address</th>
-                <th>Severity</th>
-                <th>Hostname</th>
-                <th>Message</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for log in logs %}
-            <tr {% if log['Severity'] == 3 %} style="background-color: red; color: white;" {% endif %}>
-                <td>{{ log['Timestamp'] }}</td>
-                <td>{{ log['IP Address'] }}</td>
-                <td>{{ log['Severity'] }}</td>
-                <td>{{ log['Hostname'] }}</td>
-                <td>{{ log['Message'] }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-        </tbody>
-    </table>
+    <div class="container">
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Timestamp</th>
+                    <th>IP Address</th>
+                    <th>Severity</th>
+                    <th>Hostname</th>
+                    <th>Message</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for log in logs %}
+                <tr>
+                    <td class="timestamp">{{ log['Timestamp'] }}</td>
+                    <td class="ip-address">{{ log['IP Address'] }}</td>
+                    <td class="severity">{{ log['Severity'] }}</td>
+                    <td class="hostname">{{ log['Hostname'] }}</td>
+                    <td class="message">{{ log['Message'] }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+            </tbody>
+        </table>
+    </div>
+    <script>
+        const trs = Array.from(document.querySelectorAll("tr"));
+        trs.forEach((tr) => {
+            const severity = Array.from(tr.children)[2];
+            if (Number(severity.textContent) === 7)
+                tr.classList.add("severity-7")
+        })
+    </script>
 </body>
 </html>
