--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Login Form using Html & CSS Only</title>
+    <title>Syslog Automation</title>
     <link rel="stylesheet" href="static/style.css">
 </head>
 
